# valeska

./: .gitignore  README.md  drizzle.config.ts  index.html  package-lock.json  package.json  script.ts  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/logic/: mod.rs  parse_full_ubl_xml.rs  pdf_parser.rs  xml_parser.rs
src/app/: routes.tsx  textEncoding.test.ts
src/app/components/: AppShell.tsx  ConflictChip.tsx  ConnectionBadge.tsx  DeliveryCard.tsx  Sidebar.tsx  StatusPill.tsx  SyncChip.tsx  SyncIndicator.tsx  Topbar.tsx  UserMenu.tsx
src/app/components/catalogos/: CatalogoFormModal.tsx  CatalogoModal.tsx  CatalogoTable.tsx  DeleteConfirmModal.tsx
src/app/components/documents/: DocumentPreviewPanel.tsx  GenerateDocumentModal.tsx
src/app/components/empresa/: EmpresaModal.tsx
src/app/components/perfiles/: PerfilFormModal.tsx
src/app/components/shared/: ActionButton.tsx  CopiableField.tsx  FormField.tsx  SelectField.tsx  UserCard.tsx
src/app/components/ui/: form.tsx
src/app/config/: clausulaConfig.json  formconfig.json  medinaConfig.json  pantigosoConfig.json
src/app/constants/: templateVariables.ts
src/app/db/: localDb.ts  migrations.ts  schema.ts
src/app/lib/: imageConverter.ts
src/app/mocks/: documents.mock.ts  tramites.mock.ts
src/app/pages/: ConfigPage.tsx  DashboardPage.tsx  HelpPage.tsx  SituacionesPage.tsx  SyncPage.tsx  UsuariosPage.tsx
src/app/services/: syncService.ts
src/app/types/: sync.types.ts
src/styles/: theme.css
(+123 files in other folders)
