[package]
name = "valeska"
version = "1.0.1"
description = "Valeska App"
authors = ["Studios TKOH!"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at [https://doc.rust-lang.org/cargo/reference/manifest.html](https://doc.rust-lang.org/cargo/reference/manifest.html)

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
pdf-extract = "0.10.0"
regex = "1.10"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
mac_address = "1.1.8"
sha2 = "0.10.9"
hex = "0.4.3"
dotenvy_macro = "0.15.7"
aes-gcm = "0.10.3"
tauri-plugin-fs = "2"
